Fixes the bug: Email is broken on dashes in user details sidebar

--- a/src/app/components/sidebar-user-details/sidebar-user-details.component.scss
+++ b/src/app/components/sidebar-user-details/sidebar-user-details.component.scss
@@ -143,6 +143,7 @@ button.user-details-btn-close {
     line-height: 6px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    white-space: nowrap;
 }
 
 .user-details-role {
